first() durcg get(0) für Kotlin ersetzt